--- a/index.html
+++ b/index.html
@@ -126,7 +126,6 @@
 					width: 56px;
 				}
 			}
-
 		</style>
 		<link rel="icon" href="images/logo.svg" />
 		<!-- FONST -->
@@ -190,27 +189,27 @@
 			<section class="logo-section">
 				<div class="container logo-section__container">
 					<div class="logo-section__item">
-						<img src="images/logo-section-1.svg" alt="logo1">
+						<img src="images/logo-section-1.svg" alt="logo1" />
 					</div>
 
 					<div class="logo-section__item">
-						<img src="images/logo-section-2.svg" alt="logo2">
+						<img src="images/logo-section-2.svg" alt="logo2" />
 					</div>
 
 					<div class="logo-section__item">
-						<img src="images/logo-section-3.svg" alt="logo3">
+						<img src="images/logo-section-3.svg" alt="logo3" />
 					</div>
 
 					<div class="logo-section__item">
-						<img src="images/logo-section-4.svg" alt="logo4">
+						<img src="images/logo-section-4.svg" alt="logo4" />
 					</div>
 
 					<div class="logo-section__item">
-						<img src="images/logo-section-5.svg" alt="logo5">
+						<img src="images/logo-section-5.svg" alt="logo5" />
 					</div>
 
 					<div class="logo-section__item">
-						<img src="images/logo-section-6.svg" alt="logo6">
+						<img src="images/logo-section-6.svg" alt="logo6" />
 					</div>
 				</div>
 			</section>
